--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body {
     --btn-color: #f1c40f;
 }
 
+.check {
+    position: sticky;
+    top: 0;
+    background-color: whitesmoke;
+}
+
 header {
     padding: 0;
     margin: 0;
@@ -39,6 +45,7 @@ header {
 
 #nav-bar li {
     list-style: none;
+    font-family: var(--primary-font);
 }
 
 @media screen and (max-width : 800px) {
